[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/enemies/enemy_base/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/enemies/level 1/mosquito/Mosquito.gd" type="Script" id=2]
[ext_resource path="res://assets/level1 - forest/enemies/mosquito/02.png" type="Texture" id=3]
[ext_resource path="res://assets/level1 - forest/enemies/mosquito/01.png" type="Texture" id=4]
[ext_resource path="res://assets/level1 - forest/enemies/mosquito/03.png" type="Texture" id=5]
[ext_resource path="res://assets/level1 - forest/enemies/mosquito/11.png" type="Texture" id=6]
[ext_resource path="res://assets/level1 - forest/enemies/mosquito/09.png" type="Texture" id=7]
[ext_resource path="res://assets/level1 - forest/enemies/mosquito/10_NLL.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ) ],
"loop": false,
"name": "die",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 19.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 19.0

[sub_resource type="CircleShape2D" id=4]
radius = 160.078

[node name="Mosquito" instance=ExtResource( 1 )]
script = ExtResource( 2 )
speed = 50.0
damage = 10

[node name="AnimatedSprite" parent="." index="0"]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 1 )

[node name="Body" parent="." index="2"]
position = Vector2( -4, 14 )
shape = SubResource( 2 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -4, 14 )
shape = SubResource( 3 )

[node name="CollisionShape2D" parent="DetectionRange" index="0"]
position = Vector2( -4, 10 )
shape = SubResource( 4 )

[node name="ReverseTimer" type="Timer" parent="." index="5"]
process_mode = 0
wait_time = 3.0
one_shot = true
autostart = true

[node name="StopTimer" type="Timer" parent="." index="6"]
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="timeout" from="ReverseTimer" to="." method="_on_ReverseTimer_timeout"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
